clean up + bump version to 0.5